--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ emu-docker = "emu.emu_docker:main"
 python = "^3.10"
 PyYAML = "^6.0"
 docker = "^6.1.1"
+requests = "2.30.0"
 tqdm = "^4.65.0"
 console-menu = "^0.8.0"
 click = "^8.1.3"
