--- a/emu/templates/avd/Pixel2.avd/config.ini
+++ b/emu/templates/avd/Pixel2.avd/config.ini
@@ -6,7 +6,7 @@ avd.ini.encoding=UTF-8
 disk.dataPartition.size=512MB
 fastboot.forceColdBoot=no
 hw.accelerometer=yes
-hw.audioInput=yes
+hw.audioInput=no
 hw.battery=yes
 hw.camera.back=emulated
 hw.camera.front=emulated
