--- a/emu/templates/avd/Pixel2.avd/config.ini
+++ b/emu/templates/avd/Pixel2.avd/config.ini
@@ -8,6 +8,7 @@ fastboot.forceColdBoot=no
 hw.accelerometer=yes
 hw.audioInput=no
 hw.battery=yes
+hw.bluetooth=no
 hw.camera.back=emulated
 hw.camera.front=emulated
 hw.cpu.ncore=4
